--- a/ns-opm-im_description.tex
+++ b/ns-opm-im_description.tex
@@ -1,6 +1,8 @@
 \documentclass{gmto}
 
 \usepackage{amsmath}
+\usepackage[load=accepted]{siunitx}
+\usepackage{todonotes}
 
 \DocID{GMT-XXX-\#\#\#\#}
 \DocVersion{1.0}
@@ -79,7 +81,7 @@ segments thermal figure errors ...
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{/home/rconan/Documents/GMT/Review/ASMFDR/nsiq.png}
+%  \includegraphics[width=\textwidth]{/home/rconan/Documents/GMT/Review/ASMFDR/nsiq.png}
   \caption{Natural Seeing image quality error budget.}
   \label{fig:ns-iq}
 \end{figure}
@@ -365,43 +367,110 @@ plot of GMT pupil (M2 baffle (3.6m), M1 drain holes, trusses)
 
 \paragraph{SH48}
 
+
+
 \clearpage
-\subsection{Control systems}
+\subsection{Control Model Architecture}
 \label{sec:control}
 
-Fig.~\ref{fig:ns-ctrl} reproduces the Natural Seeing OPM control block diagram
-from the GMT Observatory Architecture Document\cite{OAD}.
-\begin{figure}
-  \centering
-  \includegraphics[width=0.8\linewidth]{ns-control.png}
-  \caption{Natural Seeing control block diagram.}
-  \label{fig:ns-ctrl}
+Fig.~\ref{fig:NS_end2end} illustrates the integrated modeling simulation setup for the Natural Seeing observation mode. %
+%
+\begin{figure}[!hbt]
+    \centering
+    \includegraphics[width=\textwidth]{NS_end2end_syslevel.pdf}
+    \caption{Natural seeing end--to--end simulation setup.}
+    \label{fig:NS_end2end}
 \end{figure}
+%
+ The telescope structural dynamics~\cite{ss2fem_Christoph2020}, the optical propagation block (DOS)~\cite{Conan2017_DOS}, and the control model compose the end--to--end simulation framework. One can split the control model into two groups: the optical feedback and the local device/mechanical subsystem loops. The active optics and the segment tip--tilt (Fast TT) controller belong to the first group, relying on feedback from wavefront sensor measurements. The second has the lower--level control systems, namely the mount, M1 (outer force and position control), and M2 (Positioner and inner FSM loop controllers). In the following, we provide a brief description of each subsystem control model. For a detailed presentation, one is referred to the indicated references.
 
-\subsubsection{Mount controller}
-\label{sec:mount-ctrl}
-
-\subsubsection{M1 hardpoints to actuators force loop }
-\label{sec:m1-ctrl}
-
-\cite{GMT.DOC.05153}
-
-\subsubsection{M2 controllers}
-\label{sec:m2-ctrl}
-
-\cite{GMT.DOC.05154}
-
-\paragraph{M2 positionner controller}
-
-\paragraph{M2 segment piezo--actuators controller}
 
 \subsubsection{Optical feedback loops}
 \label{sec:optics-ctrl}
 
-\paragraph{FSM tip--tilt loop}
+Fig.~\ref{fig:ns-ctrl} reproduces the Natural Seeing OPM control block diagram from the GMT Observatory Architecture Document~\cite{OAD}. That diagram adds extra details wavefront control (WFC) model, such as the interface of the controllers with the  Acquisition, Guiding and Wavefront Sensing (AGWS) unit and the commanded subsystems. The Natural Seeing algorithm description document~\cite{GMTO.NS.Alg.DOC} provides a complete presentation of the wavefront control algorithms.
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[width=0.7\linewidth]{ns-control.png}
+  \caption{Natural Seeing wavefront control block diagram.}
+  \label{fig:ns-ctrl}
+\end{figure}
 
 
-\paragraph{Active Optics}
+%\paragraph{Segment tip--tilt loop}
+
+The Segment Tip--Tilt (Fast TT) Control Loop aims at minimizing image jitter by sending TT commands to the FSM. The feedback signal is the segment wavefront slopes measured by one of the four AGWS probes (in the TT mode that provides the slopes from a $24 \times 24$ lenslet array). The loop nominal frame rate is \SI{200}{Hz}. In the current design, the Fast TT controller has an integral controller connected to a lead--lag structure. The goal is to partially compensate for the lag of the inner FSM loop and also improve the disturbance rejection in the low--frequency range, without compromising the stability margins. Fig.~\ref{fig:ttt_s7_plots} depicts control loop characterization plots. On the left, the Nichols chart indicates that the considered design provides comfortable stability margins, as the open--loop responses do not approach the robustness boundary. On the right, one can see that the achieved sensitivity function is within the rejection transfer function (RTF) envelope, which is even more stringent than the nominal sensitivity defined in REQ--L3--OAD--35337 around \SI{10}{Hz}.
+%
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[width=\linewidth]{tt_S7_nichols_T-eps-converted-to.pdf}
+  \caption[Open-loop and sensitivity transfer function plots for the center segment.]{Open-loop and sensitivity transfer function plots for the center segment (S7).}
+  \label{fig:ttt_s7_plots}
+\end{figure}
+The characterization plots for other segments and more details about the segment Tip--Tilt control model are presented in \cite[Section~4.3]{GMT.DOC.05154}.
+
+%\paragraph{Active Optics}
+
+The active optics (AcO) control strategy can be split into two steps. % (Fig. ???). 
+First, there is an estimation (or reconstruction) step that aims at recovering the controllable modes (states) based on measurements of at least 3 AGWS probes in the WFS mode, such that each one provides the slopes from a Shack--Hartmann WFS with a $48 \times 48$ lenslet array. The controllable modes are the M1 and M2 rigid--body motions (RBMs), a subset of the M1 bending modes (BMs), and eventually global pointing errors projected onto azimuth (AZ), elevation (EL) and GIR axes. The active optics reconstruction is handled as an optimization problem based on four fundamental requirements: ({\it i}) wavefront error minimization, ({\it ii}) blind modes penalization --- piston error and outer--axis segment clocking, ({\it iii}) implementation of a load balance policy, and ({\it iv}) achieving an optimal solution within the admissible control set, that is, accounting for the actuator limits, which are imposed through inequality constraints. Second, a feedback integral compensator processes the reconstructed controllable modes and outputs correction commands to the M1 \& M2 segment position, the M1 shape and the mount orientation.
+
+
+%\paragraph{FSM offload controller --- Include ?}
+The FSM provides high bandwidth M2 segment $R_x$ and $R_y$ control with a limited range of motion, while the M2 Positioner provides lower bandwidth with a wider range of motion. The M2 Offload Loop (REQ--L3--OAD--34785~\cite{OAD}) aims at maximizing the available FSM stroke by maintaining the FSM actuators near the center of their range. The strategy described in~\cite[Section 6.4]{GMTO.NS.Alg.DOC} produces the FSM offloading signal by integrating the low--frequency trend of the segment tip--tilt corrections over a \SI{1}{s} time window. Such offloading contribution is summed to the AcO offset commands to the M2 positioned system.
+
+\subsubsection{Mount controller}
+\label{sec:mount-ctrl}
+
+The mount structure shall follow a given trajectory that can be either slewing to a new science target in the sky or tracking a target. The controller ensures the mount stays on course while subject to various disturbances like the effects of gravity and wind buffeting. The mount controller generates compensation torque commands to the elevation, azimuth and Gregorian instrument rotator (GIR) drives axes to mitigate the tracking error computed based on the feedback signal of the mount axes encoders.  The mount control model also considers the drive actuators by representing their dynamics and some major nonlinear effects, such as quantization errors, friction, and parasitic torques.
+
+Each mount axis is controlled independently using a PID compensator and resonance (notch) filters to cope with structural resonant modes. A feedforward strategy is also envisioned to relieve the feedback compensator during critical acceleration/deceleration phases. As illustrated in the mount controller frequency responses of Fig.~\ref{fig:mount-ctrl}, the filter parameters assume different tunings depending on the telescope elevation angle. More details on the mount control model, including the structural dynamics behavior for different mount elevation angles, are reported in \cite[Section 3]{ODC_end2end_2021}.
+\begin{figure}
+  \centering
+  \includegraphics[width=0.32\linewidth]{AZ_fbC_za.eps}
+    \includegraphics[width=0.32\linewidth]{EL_fbC_za.eps}
+      \includegraphics[width=0.32\linewidth]{GIR_fbC_za.eps}
+  \caption{Mount feedback controllers for different elevation angles.}
+  \label{fig:mount-ctrl}
+\end{figure}
+
+
+\subsubsection{M1 subsystem local control}
+%\subsubsection{M1 hardpoints to actuators force loop }
+\label{sec:m1-ctrl}
+
+Each primary mirror (M1) segment has six stiff actuators connected to the back of each segment, forming a hexapod. Those actuators (referred to as hardpoints, or simply HP) are also attached to the telescope mount through a cell weldment. Therefore, one defines the rigid--body position of the M1 segments by controlling the lengths of the hardpoints. In addition, the HPs have load cells mounted on the extremum of the actuator rods to measure the forces at the mirror attachment points.
+
+
+A set of pneumatic actuators composes the M1 support system. Using the measurements of the HP load cells as feedback signals, the primary mirror device control system (M1DCS) commands the pneumatic actuators, which apply a force vector to the back surface of the mirrors. These pneumatic actuators can also provide axial compensation forces to correct mirror surface figure errors through the Active Optics (AcO) control loop.
+
+
+Therefore, the role of the M1 control system is threefold. First, the primary mirror shall support the mirror segments while minimizing the stress at the connection points with the HPs. Second, controlling the shape of the primary mirrors. Third, to provide the reference position to each segment by commanding the lengths of the hardpoints. One of the goals of the integrated modeling effort is to develop end--to--end simulation models putting together the main telescope subsystems. To enable the evaluation of the effect of the M1 subsystem in the GMT optical performance, the simulation models incorporate the behavior of the hardpoints and the support actuator system. The document \cite{GMT.DOC.05153} discusses the M1 control under the GMT integrated model perspective.
+
+
+
+\subsubsection{M2 subsystem control loops}
+\label{sec:m2-ctrl}
+
+Fig.~\ref{fig:fsm_control_arch} shows the secondary mirror (M2) control system model. The block diagram also indicates its interfaces with the segment TT and the active optics controller. %
+%
+\begin{figure}[!hbt]
+    \vspace{6pt}
+    \centering
+    \includegraphics[width=\textwidth]{WFC-FSM_control_intf.pdf}
+    \caption{M2 FSM control system architecture.}
+    \label{fig:fsm_control_arch}
+\end{figure}
+%
+%\paragraph{M2 positionner controller}
+The M2 POS feedback controller takes the error vector of the positioner actuators lengths to calculate the respective control force signals. A $42 \times 42$--transformation matrix maps secondary mirror rigid-body motions, provided by the Active Optics Controller in the Natural Seeing Observing mode~\cite{GMTO.NS.Alg.DOC}, into the reference signal to the M2 positioner actuators lengths. The Observatory Requirement Document (OAD)~\cite{OAD}  stipulates through REQ--L3--OAD--35039 that the M2 positioner (M2P) shall provide a bandwidth of \SI{2}{Hz} while tracks the rigid--body motion commands.
+
+%\paragraph{M2 segment piezo--actuators controller}
+A decoupling matrix transforms the segment tip--tilt commands into linear positions references to the FSM piezo actuators (PZT), used as set--points to the FSM inner control loop (see Fig.~\ref{fig:fsm_control_arch}). By feeding back the differential displacements of the PZT actuators, the inner loop FSM controller provides actuator force commands to track the differential position command. %
+The level--3 OAD requirement REQ--L3--OAD--35044 \cite{OAD} states that the dynamic response of the M2 FSMS shall be compatible with the one from a second--order linear system with a $0.6$ damping ratio and \SI{25}{Hz} bandwidth.
+
+
+For a more detailed description of the M2 positioner and FSM inner controllers, including control loop robustness and performance analysis plots, one is referred to \cite[Section 4.1 and 4.2]{GMT.DOC.05154}.
+
 
 
 \clearpage
