Controller model section updates

--- a/gmt.bib
+++ b/gmt.bib
@@ -45,13 +45,15 @@
 }
 @TECHREPORT{ GMT.DOC.02011 ,
 	author = "D. Schwartz",
-	title = "GMT Mount Select Requirement Verification
-Methods",
+	Date-Added = "2021-03-09 17:28:16 +0000",
+	Date-Modified = "2021-03-09 17:30:16 +0000",
+	title = "{GMT Mount Select Requirement Verification Methods}",
 	number = "GMT-DOC-02011",
-	institution = "GMTO",
+	institution = "GMTO", %Giant Magellan Telescope Organization
 	year = 2020,
-  month = 09
+ 	month = 09
 }
+
 @TECHREPORT{ GMT.REF.00518 ,
 	author = "Antonin Bouchez and Breann Sitarski and George Angeli and Rod Conan and Brady Espeland and Fernando Quiros-Pacheco and Marcos van Dam",
 	title = "Adaptive Optics Image Quality Budget",
@@ -729,15 +731,6 @@ note = {From the First ACM Workshop on Applied Computational Geometry}
 	Institution = {Giant Magellan Telescope Organization},
 	Title = {{ GMT Observatory Architecture Document (Rev. F)}},
 	Type = {{Requirements document GMT-REQ-03215}},
-	Year = {2020}}
-
-@techreport{mount_verif_Schwartz2020,
-	Author = {D. Schwartz},
-	Date-Added = {2021-03-09 17:28:16 +0000},
-	Date-Modified = {2021-03-09 17:30:16 +0000},
-	Institution = {Giant Magellan Telescope Organization},
-	Title = {{GMT Mount Select Requirement Verification Methods}},
-	Type = {{Technical Report GMT-DOC-02011}},
 	Year = {2020}}
 
 @inproceedings{Aguayo:18m1subsystem,
