Removing *eps-converted-to.pdf file

--- a/ns-opm-im_description.tex
+++ b/ns-opm-im_description.tex
@@ -403,7 +403,7 @@ The Segment Tip--Tilt (Fast TT) Control Loop aims at minimizing image jitter by 
 %
 \begin{figure}[!htb]
   \centering
-  \includegraphics[width=\linewidth]{tt_S7_nichols_T-eps-converted-to.pdf}
+  \includegraphics[width=\linewidth]{tt_S7_nichols_T.eps}
   \caption[Open-loop and sensitivity transfer function plots for the center segment.]{Open-loop and sensitivity transfer function plots for the center segment (S7).}
   \label{fig:ttt_s7_plots}
 \end{figure}
